# quickstart-chat

./: .gitignore  Cargo.toml  README.md  e  ec  genclientbindings  login  logs_show  publish  run_client  ssl_test  wipe-db
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
