[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb.workspace=true # = { version="1.1.1",  path="/home/user/SOURCE/SpacetimeDB/crates/bindings/" }
#  path="/home/user/SOURCE/SpacetimeDB/crates/"
#}
log.workspace=true # = "0.4"

